# document-extraction

./: .gitignore  pyproject.toml
src/docextractors/: cli.py  config.py  loggingconfig.py
src/docextractors/core/extractor/: base_extractor.py
src/docextractors/core/models/: document_unit.py
src/docextractors/excelextractor/: main.py
src/docextractors/pdfextractor/: main.py  pdfparser.py
src/docparsers/excelparser/: main.py
src/ingestion/: ingest.py
src/ingestion/delta/: delta.py
