[project]
name = "docextractors"
version = "0.1.0"
description = "Document parsers for NewSpring Capital."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas[excel]>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
    "click>=8.3.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/docextractors"]

[project.scripts]
cli = "docextractors.cli:cli"
excel = "docextractors.excelparser.main:main"
pdf = "docextractors.pdfparser.main:main"
